<resources >
    <string name="app_name">Coupons</string>
    <string name="main_button_consult">Consult</string>
    <string name="main_button_create">Create coupon</string>
    <string name="main_text_title">Welcome, enter your coupon and press consult</string>
    <string name="main_hint_coupon">coupon</string>
    <string name="main_hint_description">description</string>
    <string name="error_unique_code">The coupon already exists, use another code</string>
    <string name="error_invalid_length">The coupon have to consists of 5 to 10 characters.</string>
    <string name="error_unknown">Unknown error in create coupon</string>
    <string name="main_save_success">Created coupon</string>
    <string name="main_hint_active">active coupon</string>
    <string name="main_text_create">Available coupon code, please enter the description of the coupon and press save.</string>
</resources>